<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@color/darkBlue"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            android:text="@string/name_of_movie"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

        <RatingBar
            android:id="@+id/rbRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:numStars="0"
            android:stepSize="0.5"
            android:progressTint="#E4D440"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvVoteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@+id/rbRating"
            app:layout_constraintStart_toEndOf="@+id/rbRating"
            app:layout_constraintTop_toTopOf="@+id/rbRating"
            tools:text="1k reviews" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:drawablePadding="20dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            android:textSize="@dimen/sp_12"
            app:drawableStartCompat="@drawable/ic_clock"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteCount"
            tools:text="@string/sample_time" />

        <TextView
            android:id="@+id/textReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:paddingStart="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            app:drawableStartCompat="@drawable/ic_calendar"
            app:layout_constraintTop_toBottomOf="@+id/tvDuration"
            tools:text="@string/sample_date" />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@+id/textReleaseDate"
            tools:text="@string/sample_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>