<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMovie"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10"
    android:background="@color/black"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp_10">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dp_150"
        android:layout_height="@dimen/dp_250"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="@dimen/dp_150"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@drawable/movieposter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_35"
            android:layout_marginEnd="@dimen/dp_40"
            app:cpb_background_progressbar_color="#204529"
            app:cpb_background_progressbar_width="3dp"
            app:cpb_progress="0"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="#21D07A"
            app:cpb_progressbar_width="5dp"
            app:cpb_round_border="false"
            app:layout_constraintBottom_toBottomOf="@+id/ivMoviePoster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_12"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
            app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dp_2"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="5dp"
            android:foregroundGravity="bottom"
            android:maxLines="2"
            android:text="@string/tom_clancy_s_without_remorse"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMoviePoster"
            app:layout_constraintTop_toBottomOf="@+id/ivMoviePoster" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="@string/apr_29_2021"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


